force-app/main/default/objects/StepLog__e/StepLog__e.object-meta.xml
<CustomObject>
    <label>Step Log</label>
    <pluralLabel>Step Logs</pluralLabel>
</CustomObject>