force-app/main/default/objects/StepLog__e/fields/CPU_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Ms__c</fullName>
    <label>CPU Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>