force-app/main/default/objects/StepLog__e/fields/DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Used__c</fullName>
    <label>DML Statements Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>