force-app/main/default/objects/StepLog__e/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <label>Execution Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>