force-app/main/default/objects/StepLog__e/fields/SOQL_Queries_Used__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Used__c</fullName>
    <label>SOQL Queries Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>