force-app/main/default/objects/StepLog__e/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>