force-app/main/default/objects/StepLog__e/fields/Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Id__c</fullName>
    <label>Workflow Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>